--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "db": "npx node ./tools/db.js",
     "view": "npx node ./tools/view.js",
     "format": "npx prettier --config ./.prettierrc.json -uw ./.*.json ./*.json ./app.js ./src/ ./tools/ ./resources_custom/",
-    "check": "npx eslint ./app.js ./src/ ./tools/ ./config_defaults/",
+    "check": "npx eslint ./app.js ./src/ ./tools/ ./config_defaults/ ./mongodb/",
     "init": "npx node --max-http-header-size=2097152 ./app.js",
     "start": "cross-env-shell PM2_HOME=$INIT_CWD/bot.pm2/ npx pm2 start ./.pm2.json; cross-env-shell PM2_HOME=$INIT_CWD/bot.pm2/ npx pm2 save",
     "restart": "cross-env-shell PM2_HOME=$INIT_CWD/bot.pm2/ npx pm2 restart ./.pm2.json",
@@ -49,8 +49,9 @@
     "md5": "2.3.0",
     "moment": "2.29.1",
     "moment-timezone": "0.5.34",
+    "mongodb": "4.2.0",
     "node-fetch": "3.1.0",
-    "node-schedule": "2.0.0",
+    "node-schedule": "2.1.0",
     "oicq": "1.21.2",
     "pm2": "5.1.2",
     "pretty-bytes": "5.6.0",
