--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
   },
   "scripts": {
     "test": "exit 0",
-    "db": "npx node ./tools/db.js",
-    "view": "npx node ./tools/view.js",
     "format": "npx prettier --config ./.prettierrc.json -uw ./.*.json ./*.json ./app.js ./src/ ./tools/ ./resources_custom/",
     "check": "npx eslint ./app.js ./src/ ./tools/ ./config_defaults/ ./mongodb/",
     "init": "npx node --max-http-header-size=2097152 ./app.js",
@@ -34,7 +32,12 @@
     "unstartup": "cross-env-shell PM2_HOME=$INIT_CWD/bot.pm2/ npx pm2 unstartup",
     "list": "cross-env-shell PM2_HOME=$INIT_CWD/bot.pm2/ npx pm2 list bot",
     "info": "cross-env-shell PM2_HOME=$INIT_CWD/bot.pm2/ npx pm2 info bot",
-    "log": "cross-env-shell PM2_HOME=$INIT_CWD/bot.pm2/ npx pm2 log --lines 100 bot"
+    "log": "cross-env-shell PM2_HOME=$INIT_CWD/bot.pm2/ npx pm2 log --lines 100 bot",
+    "mongo-start": "sudo docker-compose -f $INIT_CWD/mongodb/docker-compose.yml up -d",
+    "mongo-stop": "sudo docker-compose -f $INIT_CWD/mongodb/docker-compose.yml stop",
+    "mongo-info": "sudo docker-compose -f $INIT_CWD/mongodb/docker-compose.yml ps",
+    "debug-db": "npx node ./tools/db.js",
+    "debug-view": "npx node ./tools/view.js"
   },
   "dependencies": {
     "cross-env": "7.0.3",
