--- a/config_defaults/setting.yml
+++ b/config_defaults/setting.yml
@@ -71,7 +71,7 @@ requestInterval: 0
 # 注意从机器人发出消息开始计时，如果使用此功能推荐至少设置为 30 。
 # [0, Interger]
 deleteGroupMsgTime: 115
-
+szAPIAppid: f40e478ad5d244b3b286807ec5b46880
 
 # ==============================================================================
 # 除非你十分确定你要做什么，否则请勿修改以下配置。
