--- a/config_defaults/setting.yml
+++ b/config_defaults/setting.yml
@@ -44,7 +44,7 @@ masters:
 atMe: 1
 # 群聊回复时是否 @ 用户。
 # 1:是、 0:否
-atUser: 1
+atUser: 0
 # 是否回复陌生人消息。
 # 不为直接好友的群友为陌生人。
 # 1:是、 0:否
@@ -55,7 +55,7 @@ replyStranger: 1
 repeatProb: 0.25
 # 上线是否发送群通知。
 # 1:发送、 0:不发送
-groupHello: 1
+groupHello: 0
 # 是否向新群友问好。
 # 1:问好、 0:不问好
 groupGreetingNew: 1
@@ -127,3 +127,4 @@ viewDebug: 0
 # 是否保存图片
 # 1:保存、 0:不保存
 saveImage: 0
+botCommands: mys,#mys,#uid,签到,原魔,语音,食物,活动列表,御神签,开启,关闭,绑定mys,绑定uid,每月统计,当前状态,添加,查询,签到,校验全部Cookies
