增加派蒙2号关键词

--- a/config_defaults/setting.yml
+++ b/config_defaults/setting.yml
@@ -133,4 +133,4 @@ viewDebug: 0
 # 是否保存图片
 # 1:保存、 0:不保存
 saveImage: 0
-botCommands: mys,#mys,#uid,签到,原魔,语音,食物,活动列表,御神签,开启,关闭,绑定mys,绑定uid,每月统计,当前状态,添加,查询,签到,校验全部Cookies
+botCommands: mys,#mys,#uid,签到,原魔,语音,食物,活动列表,御神签,gs开启,gs关闭,关闭,绑定mys,绑定uid,每月统计,当前状态,当前信息,添加,查询,签到,校验全部Cookies
